# g7_hpes_2019

assignment_1/QEMU/: video.txt
assignment_1/QEMU/images/: sdcard.img.txt  u-boot
assignment_2/meta-tec/conf/: layer.conf
assignment_2/meta-tec/images/: tec-image.bb
assignment_2/meta-tec/recipes-tec/: converted.yuv  rgb2yuv_v2  rgb2yuv_v2.c
assignment_2/meta-tec/recipes-tec/images/: tec-image.bb
assignment_2/meta-tec/recipes-tec/rgb2yuv-c/: rgb2yuv-c.bb
assignment_2/meta-tec/recipes-tec/rgb2yuv-c/files/: Makefile.am  configure.ac  documentation-example.txt  input.rgb  output.yuv  output_c.yuv  rgb2yuv-c.c
assignment_2/meta-tec/recipes-tec/rgb2yuv-intrinsics/: rgb2yuv-intrinsics.bb
assignment_2/meta-tec/recipes-tec/rgb2yuv-intrinsics/files/: Makefile.am  configure.ac  output_intrinsics.yuv  rgb2yuv-intrinsics.c
homework1/Part1/: case1  case1.c  case1.txt  case2  case2.txt  case3  case3.txt  case3free  valgrind_case1.txt  valgrind_case2.txt  valgrind_case3.txt
homework1/Part2/: case3  case3.c  mylib.c  secuencia.txt  test  test.c
homework1/Part2/memcheck/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libtool
homework1/Part2/memcheck/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
homework1/Part2/memcheck/lib/: Makefile  Makefile.am  Makefile.in  libmemcheck.la  libmemcheck.lo  libmemcheck_la-libmemcheck.lo
homework1/Part2/memcheck/src/: Makefile  Makefile.am  Makefile.in  memcheck
